--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,16 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Noto Sans KR', sans-serif;
+body {
+    background-image:url("/img/bgweb.jpg");
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    background-size: 90%;
+}
+header
+{
+	background-color: white
 }
 .navbar{
     display: flex;
@@ -207,7 +215,7 @@ ul{
     padding: 50px 0;
 }
 .form-container{
-    background: #fff;
+    background: #AFEEEE;
     width: 300px;
     height: 400px;
     position: relative;
